# python-common

./: .flake8  .gitignore  .gitlab-ci.yml  .licenses_used.md  .python-version  LICENSE  README.md  pyproject.toml  setup.py  tasks.py
common/: boolean.py  config.py  config_utils.py  datetime_utils.py  dicts.py  enumerable.py  geckoboard.py  html.py  import_utils.py  path_utils.py  picklers.py  rql.py  strings.py  urlsafe_base64.py  web_tokens.py
common/ci_cd/: pytest_coverage_runner.py  result.py
common/commandline/: verbose_argument_parser.py
common/json/: __init__.py  codecs.py  io.py
common/licenses/: constants.py  tasks.py
common/xml/: simple_parser.py
tests/: test_boolean.py  test_config.py  test_config_utils.py  test_datetime_utils.py  test_enumerable.py  test_geckoboard.py  test_html.py  test_import_utils.py  test_json.py  test_logging_utils.py  test_picklers.py  test_rql.py  test_strings.py  test_urlsafe_base64.py  test_web_tokens.py
tests/cassettes/: TestDataset.test_append.yaml  TestDataset.test_clear.yaml  TestDataset.test_create_schema_from_class.yaml  TestDataset.test_create_schema_from_dict.yaml  TestDataset.test_create_schema_from_instance.yaml  TestDataset.test_delete.yaml  TestDataset.test_get_schema.yaml  TestDataset.test_get_schema_ids.yaml  TestDataset.test_get_schemas.yaml  TestDataset.test_overwrite.yaml
tests/ci_cd/: failing_tests.txt  passing_tests.txt  test_pytest_coverage_runner.py
tests/commandline/: test_verbose_argument_parser.py
tests/config_testfiles/: dev.py  testing.py
tests/data_files/: trial.pickle
(+5 files in other folders)
